--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>智能对话助手</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -53,6 +54,7 @@
             <div class="input-area">
                 <input type="text" id="messageInput" placeholder="请输入消息...">
                 <button id="sendBtn">发送</button>
+                <button id="cancelBtn" style="display: none;">取消</button>
             </div>
         </div>
     </div>
