--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="chat-container">
             <div id="chatHistory" class="chat-history"></div>
             <div class="input-area">
-                <input type="text" id="messageInput" placeholder="请输入消息...">
+                <textarea id="messageInput" placeholder="请输入消息..." rows="1"></textarea>
                 <button id="sendBtn">发送</button>
                 <button id="cancelBtn" style="display: none;">取消</button>
             </div>
